# Agentic-Rag-Legal-Challenge

./: .env.example  .gitignore  API.md  EVALUATION.md  README.md  ask_rag.py  check_accuracy.py  evaluation_report.json  main.py  pyproject.toml  requirements.txt  update_pipeline.py
arlc/: __init__.py  client.py  config.py  submission.py  telemetry.py
examples/: legal_hybrid_rag.py  test_base_pipeline_offline.py  test_chunker_offline.py  test_cohere_rate_limit_offline.py  test_hybrid_indexer_offline.py  test_ingest_offline.py  test_master_pipeline_offline.py  test_prompts_offline.py  test_reranker_offline.py  test_router_offline.py  test_turbopuffer_offline.py
ingestion/: __init__.py  ingest.py  legal_metadata.py  utils.py
ingestion/test_ingest_output/03b621728fe29eb6113fcdb57f6458d793fd2d5c5b833ae26d40f04a29c85359/txt/: 03b621728fe29eb6113fcdb57f6458d793fd2d5c5b833ae26d40f04a29c85359_content_list.json  03b621728fe29eb6113fcdb57f6458d793fd2d5c5b833ae26d40f04a29c85359_metadata.json  03b621728fe29eb6113fcdb57f6458d793fd2d5c5b833ae26d40f04a29c85359_structure.json
public_dataset/: questions.json
retrieval/: __init__.py  free_text_prompts.py  hybrid_rag_pipeline.py  legal_hybrid_rag_pipeline.py  legal_question_router.py  turbopuffer_store.py
retrieval/chunkers/: __init__.py  base.py  legal_chunk_types.py  legal_chunker.py  recursive_chunker.py
retrieval/index/: __init__.py  hybrid_indexer.py
retrieval/loaders/: __init__.py  ingested_corpus_loader.py
retrieval/utils/: __init__.py  cohere_rate_limit.py  rerankers.py
tests/: test_legal_hybrid_rag.py
(+82 files in other folders)
